--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
                         <span class="thumbnail-title">Barbars</span>
                     </a>
                 </li>
+                <li class="thumbnail-item">
+                    <a href="img/frog.png">
+                        <img class="thumbnail-image" src="img/frog.png" alt="Frog Game Results">
+                        <span class="thumbnail-title">Lesley</span>
+                    </a>
+                </li>
+                <li class="thumbnail-item">
+                    <a href="img/grid garden.png">
+                        <img class="thumbnail-image" src="img/grid garden.png" alt="Grid Garden Results">
+                        <span class="thumbnail-title">Lesley</span>
+                    </a>
+                </li>
             </ul>
             </main>
     </header>
